changed styling on contact manager form, pushing for debugging

--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -63,18 +63,23 @@
 
     <div class="modal">
         <div class="modal-background"></div>
+        <div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Sign Up</p>
+        </header>
+        <div class="modal-card-body">
         <div id="contact-form" class="modal-content">
             <form action="" method="post" autocomplete="on">
                 <div class="field">
                     <div class="control">
-                        <label class="label modal-label">Name:</label>
-                        <input id="contact-name" class="input" type="text" placeholder="Normal input">
+                        <label class="label">Name:</label>
+                        <input id="contact-name" class="input" type="text" placeholder="Your name">
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label modal-label">Email:</label>
+                    <label class="label">Email:</label>
                     <div class="control has-icons-left has-icons-right">
-                        <input id="contact-email" class="input" type="email" placeholder="Email input">
+                        <input id="contact-email" class="input" type="email" placeholder="Your e-mail address">
                         <span class="icon is-small is-left">
                             <i class="fas fa-envelope"></i>
                         </span>
@@ -83,7 +88,7 @@
                 </div>
 
                 <div class="field">
-                    <label class="label modal-label">Message</label>
+                    <label class="label">Message:</label>
                     <div class="control">
                         <textarea id="contact-message" class="textarea" placeholder="Ready for your Next Step?"></textarea>
                     </div>
@@ -94,12 +99,14 @@
                         <button id="contact-send" class="button is-link" type="submit">Submit</button>
                     </div>
                     <div class="control">
-                        <button id="contact-close" class="button is-link is-light">Cancel</button>
+                        <button id= "contact-close" class="button is-link is-light">Cancel</button>
                     </div>
                 </div>
             </form>
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+    </div>
     </div>
 
 </div>
