fixed login function on job listing page

--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -35,7 +35,7 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary">
+                        <a class="button is-primary" href="/logout">
                             <strong>Sign Out</strong>
                         </a>
                     </div>
