added back button for jobs

--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -56,8 +56,11 @@
             <p><strong>E-mail:</strong> <span id="manager-email">{{manager.email}}</span></p>
 
             <p><strong>Phone:</strong> <span id="manager-phone">{{manager.phone}}</span></p>
-
-            <button class="button contact-manager">Contact Manager</button>
+            <div class="buttons">
+                 <button class="button details-button contact-manager">Contact Manager</button>
+                <button class="button details-button back-btn">Back to Job Listings</button>
+            </div>
+           
         </div>
     </div>
 
