--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,7 @@
     margin-right: auto;
     margin-bottom: 10px;
 }
-.contact-manager {
+.details-button {
     background-color: #97d9d9;
 }
 /* use this for media breakpoints */
