changed dropdown color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@
 }
 
 .dropdown-content {
-    background-color: rgb(211, 211, 211, 0.8);
+    background-color: rgb(231, 231, 231);
 }
 
 .container {
