tell user an email was sent

--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -97,10 +97,12 @@
                 <div class="field is-grouped">
                     <div class="control">
                         <button id="contact-send" class="button is-link" type="submit">Submit</button>
+                        
                     </div>
                     <div class="control">
                         <button id= "contact-close" class="button is-link is-light">Cancel</button>
                     </div>
+                    <p id="email-sent" class="sent"> </p>
                 </div>
             </form>
         </div>
