changed route order to fix parameter bugs

--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item" href="/manager/{{manager.id}}/jobs">
+                <a class="navbar-item" href="/manager/jobs">
                     View Your Listings
                 </a>
             </div>
