--- a/views/jobpostedit.handlebars
+++ b/views/jobpostedit.handlebars
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item" href='/manager/{{id}}/jobs'>
+                <a class="navbar-item" href='/manager/jobs'>
                     View Your Listings
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
 
  <div class="control">
-        <button class="button is-primary is-medium job-submit">Submit</button>
+        <button class="button is-primary is-medium job-update" data-jobid='{{job.id}}'>Submit</button>
       </div>
 
 
@@ -164,4 +164,6 @@
 
 </section>
 
-    
+<script>
+    $('.job-submit').on()
+</script>
