--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -22,7 +22,7 @@
                                 My Profile
                             </a>
                             <a class="button is-light" href='/logout'>
-                                Logout
+                                Log Out
                             </a>
                             {{else}}
                             <a class="button is-light navbar-login">
@@ -41,9 +41,9 @@
 
     <div id="job-header">
         <div class="page-title">
-        Post a New Job
-    </div>
-        <p>These companies and organizations are currently looking for help</p>
+        These companies and organizations are currently looking for help:
+        <hr>
+        </div>
 
         <div class="dropdown is-hoverable">
             <div class="dropdown-trigger">
