--- a/views/partials/jobs/jobsmanager.handlebars
+++ b/views/partials/jobs/jobsmanager.handlebars
@@ -13,7 +13,7 @@
                 </div>
 
                 <div class= "panel-block">
-                    <p><strong>Wage: </strong> {{wage}}</p>
+                    <p><strong>Wage: </strong> ${{wage}} an hour</p>
                 </div>
 
                 <div class= "panel-block buttons managerjob-buttons">
