--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -16,15 +16,21 @@
 
         <div class="navbar-end">
             <div class="navbar-item">
-                <div class="buttons">
-                    <a class="button is-primary">
-                        <strong>Profile</strong>
-                    </a>
-                    <a class="button is-light">
-                        Log in
-                    </a>
-                </div>
-            </div>
+                        <div class="buttons">
+                            {{#if manager.isLoggedIn}}
+                            <a class="button is-light" href='/manager/{{manager.id}}'>
+                                My Profile
+                            </a>
+                            <a class="button is-light" href='/logout'>
+                                Logout
+                            </a>
+                            {{else}}
+                            <a class="button is-light navbar-login">
+                                Log In
+                            </a>
+                            {{/if}}
+                        </div>
+                    </div>
         </div>
     </div>
 </nav>
@@ -43,15 +49,17 @@
 
             <p> <strong>Type of work:</strong> <span>{{job.type}}</span></p>
 
-            <p> <strong>Compensation:</strong> <span>{{job.wage}}</span></p>
-        </div>
+            <p> <strong>Compensation:</strong> <span>${{job.wage}} an hour</span></p>
 
-        <p>Job Benefits</p>
-        <ul class='job-benefits'>
+            <p><strong>Job Benefits:</strong></p>
+                <ul class='job-benefits'>
             {{#each benefits}}
             <li>{{benefit_text}}</li>
             {{/each}}
         </ul>
+        </div>
+
+        
 
         <hr>
         <div id="job-manager">
@@ -72,14 +80,17 @@
         </div>
     </div>
 
-    <div class="modal">
+    <div class="modal" id="contact-modal">
         <div class="modal-background"></div>
         <div class="modal-card">
         <header class="modal-card-head">
-            <p class="modal-card-title">Sign Up</p>
+            <p class="modal-card-title">Contact Manager</p>
         </header>
         <div class="modal-card-body">
         <div id="contact-form" class="modal-content">
+            <div class="control form-subtitle">
+                 <p>Enter your name, e-mail, and other relevant information. We'll pass them along to the manager and let them know you're interested!</p>
+            </div>
             <form action="" method="post" autocomplete="on">
                 <div class="field">
                     <div class="control">
@@ -99,7 +110,7 @@
                 </div>
 
                 <div class="field">
-                    <label class="label">Message:</label>
+                    <label class="label">Other Information:</label>
                     <div class="control">
                         <textarea id="contact-message" class="textarea" placeholder="Ready for your Next Step?"></textarea>
                     </div>
@@ -122,4 +133,57 @@
     </div>
     </div>
 
+</div>
+
+<div class="modal" id="login-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Log In</p>
+            <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+
+            <div class="field is-horizontal">
+                <div class="field-label is-normal">
+                    <label class="label">E-mail</label>
+                </div>
+                <div class="field-body">
+                    <div class="field is-expanded">
+                        <p class="control is-expanded has-icons-left has-icons-right">
+                            <input class="input loginEmail" type="email" placeholder="E-mail address">
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-envelope"></i>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="field is-horizontal">
+                <div class="field-label is-normal">
+                    <label class="label">Password</label>
+                </div>
+                <div class="field-body">
+                    <div class="field is-expanded">
+                        <p class="control has-icons-left">
+                            <input class="input loginPassword" type="password" placeholder="Password">
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </section>
+        <footer class="modal-card-foot">
+            <button class="button is-primary loginBtn" class="submit">
+                Submit
+            </button>
+
+        </footer>
+    </div>
 </div>
