--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -35,8 +35,8 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary" href='/logout'>
-                            <strong>Sign Out</strong>
+                        <a class="button is-dark" href='/logout'>
+                                <strong>Log Out</strong>
                         </a>
                     </div>
                 </div>
