updated with merges

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,18 +9,18 @@
                     </h2>
                 </div>
                 <div class="column login-div is-5">
-                    <h3>Mission Statement</h3>
+                    <div class="subtitle"> Our Mission </div>
                     <p>Many jobs are out of reach for those who experience homelessness. Our Goal is to help connect those in our
                         society who need it with companies and organizations that are willing to give people
                         a hand to help them back onto their feet.</p>
                     <div>
-                        <button id="viewjobs" class="button is-large">View Jobs</button>
+                        <button id="viewjobs" class="button is-dark is-large">View Jobs</button>
                     </div>
                     <div id="company-login-div">
                         <h3>Want to help support our mission?</h3>
                         <p>Sign up for an account or login in and post a job</p>
-                        <button id="login" class="button">Log In</button>
-                        <button id="signup" class="button">Sign Up</button>
+                        <button id="login" class="button is-dark">Log In</button>
+                        <button id="signup" class="button is-dark">Sign Up</button>
                     </div>
 
                 </div>
