--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -87,10 +87,10 @@
     </div>
 
 <div class= "columns">
-    <div class="column is-4">
+    <div class="column is-6">
     <div class="control">
      <div class="field is-horizontal">
-  <div class="field-label">
+  <div class="field-label is-normal">
     <label class="label">Type:</label>
   </div>
   <div class="field-body">
@@ -113,10 +113,10 @@
     
 
  
-<div class= "column is-4">
+<div class= "column is-6">
       <div class="control">
           <div class="field is-horizontal">
-            <div class="field-label">
+            <div class="field-label is-normal">
                 <label class="label">Wage:</label>
             </div>
         <div class="field-body">
@@ -132,11 +132,13 @@
       </div>
     </div>
   </div>
+</div>
 
-<div class="column is-4">
+<div class="columns">
+<div class="column is-8 is-offset-2">
   <div class= "control">
     <div class="field is-horizontal">
-    <div class="field-label is-normal">
+    <div class="field-label">
         <label class="label">Benefits:</label>
     </div>
     <div class="field-body">
@@ -150,17 +152,20 @@
      </div>
     </div>
 </div>
+</div>
 
+<div class= "editbutton">
 
+ <div class="control">
+        <button class="button is-primary is-medium job-submit">Submit</button>
+      </div>
+</div>
 
 </div>
 
 
        
 
- <div class="control">
-        <button class="button is-primary is-medium job-submit">Submit</button>
-      </div>
 
 
 </div>
