--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
                 <div class="column is-7">
                     <img src="../images/Logo.png" alt="">
                     <h2 class="subtitle">
-                        Life is a journey and sometimes we just need a little help to make that next step in it.
+                        Life is a journey and sometimes we just need a little help to take that next step.
                     </h2>
                 </div>
                 <div class="column login-div is-5">
